--- a/index.html
+++ b/index.html
@@ -7,16 +7,34 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
     <div id="app">
-        <div v-for="disc in discs">
-            {{disc}}
+        <header>
+            <img src="./img/spotify-logo.png" alt="spotify-logo">
+            <div>
+                <label class="mx-2" for="genre">Cerca per genere:</label>
+                <select name="genre"  class="me-2">
+                    <option value="">All</option>
+                </select>
+            </div>
+        </header>
+        <div class="container">
+            <div class="row">
+                    <div v-for="disc in discs" class="albums-col">
+                        <div class="inner-container">
+                        <img class="album-img" :src="disc.poster" :alt="`image of ${disc.title}`">
+                        <div class="title my-3">{{disc.title}}</div>
+                        <div class="author">{{disc.author}}</div>
+                        <div class="year">{{disc.year}}</div>
+                    </div>
+                </div>
+            </div>
         </div>
-    
     </div>
 
 
