--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -18,8 +18,9 @@
             <img src="./img/spotify-logo.png" alt="spotify-logo">
             <div>
                 <label class="mx-2" for="genre">Cerca per genere:</label>
-                <select name="genre"  class="me-2">
+                <select @click="genreArray()" name="genre"  class="me-2">
                     <option value="">All</option>
+                    <option v-for="genre in genreList" :value="`${genre}`">{{genre}}</option>
                 </select>
             </div>
         </header>
